Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,18 @@ steps:
 #   inputs:
 #     terraformVersion: '0.14.3'
 
+
 - task: GoogleCloudAuth@1
   displayName: 'Authenticate with GCP'
   inputs:
     keyFile: 'pcigcp-369509-fcc6ace87823.json'
     
+steps:
+- task: ShellScript@2
+  displayName: 'Authenticate with GCP'
+  inputs:
+    scriptPath: 'authenticate.sh'
+
+# authenticate.sh
+#!/bin/bash
+              
