--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,10 +39,15 @@ steps:
   inputs:
     scriptPath: 'authenticate.sh'
 
-- task: GoogleCloudAuth@1
+# - task: GoogleCloudAuth@1
+#   displayName: 'Authenticate with GCP'
+#   inputs:
+#     keyFile: 'pcigcp-369509-fcc6ace87823.json'
+    
+- task: ShellScript@2
   displayName: 'Authenticate with GCP'
   inputs:
-    keyFile: 'pcigcp-369509-fcc6ace87823.json'
-    
+    script: |
+      gcloud auth login
 
 
