--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,16 @@ jobs:
        uses: actions/checkout@v2
        with:
         fetch-depth: 1
-  
-     - name: Publish Artifact
-       uses: actions/upload-artifact@v1
-       with:
-        name: terraform
-        
-     - name: Download tfSec
-       run: |
-        curl -L -o tfsec https://github.com/tfsec/tfsec/releases/download/v0.34.0/tfsec-linux-amd64     - name: tfsec Install
-        run: |
-         chmod +x tfsec
-         sudo mv tfsec /usr/local/bin
-     - name: Script-validating
-       run: tfsec $(build.artifactstagingdirectory)/terraform
+     -  name: Install Terraform 
+        run: | 
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add - 
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main" 
+          sudo apt-get update && sudo apt-get install terraform 
+     -  name: Initialize Terraform 
+        run: terraform init 
+     - name: Validate Terraform code 
+       run: terraform validate 
+     - name: Deploy infrastructure  
+        run:| 
+          terraform plan -out=tfplan 
+          terraform apply tfplan
