--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD
 on:
   push:
     branches:
@@ -19,7 +19,10 @@ jobs:
          run: terraform init 
        - name: Validate Terraform code 
          run: terraform validate 
-       - name: Deploy infrastructure  
+       - name: Deploy infrastructure
+         uses: action/upload-artifact@v3.1.2
+         with:
+            path: main/teraform/
          run: | 
           terraform plan -out=tfplan 
           terraform apply tfplan
