--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
          uses: action/upload-artifact@v3.1.2
          with:
             path: main/teraform/
+       - name: deploy
          run: | 
           terraform plan -out=tfplan 
           terraform apply tfplan
