--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,13 @@ jobs:
           curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add - 
           sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main" 
           sudo apt-get update && sudo apt-get install terraform 
+       - name: change the directory
+         run: cd $(dirname terraform/main.tf)
        - name: Initialize Terraform 
-         run: terraform init 
+         run: terraform init
        - name: Validate Terraform code 
          run: terraform validate 
        - name: Deploy infrastructure
          run: |
-           cd $(dirname terraform/main.tf)
            terraform plan -out=tfplan 
            terraform apply tfplan
