--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches:
       - main
+env: 
+  VM: ${{env.VM}}
 jobs:
    build:
      name: Job_1
-     runs-on: ubuntu-latest
+     runs-on: $VM
      steps:
        - name: Checkout
          uses: actions/checkout@v3.3.0       
