--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
    build:
      name: Job_1
-     runs-on: ${{env.VM}}
+     runs-on: ${{var.VM}}
      steps:
        - name: Checkout
          uses: actions/checkout@v3.3.0       
