--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - name: Checkout
-         uses: actions/checkout@v3.3.0       
+         uses: actions/checkout@latest       
        - name: Install Terraform 
          run: | 
            ${{env.COMMANDS}}
